k8s/etcd-app-cluster-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-service
  namespace: default
  labels:
    app: etcd-app

spec:
  type: ClusterIP

  selector:
    app: etcd-app

  ports:
    - protocol: TCP
      port: 9000
      targetPort: etcd-app-port
