k8s/etcd-cluster.yaml

apiVersion: v1
kind: Pod
metadata:
  name: etcd0
  namespace: etcd-project
  labels:
    app: etcd-cluster
    etcd_pod: etcd0

spec:
  containers:
    - name: etcd0
      image: bitnami/etcd:3-debian-10

      ports:
        - containerPort: 2379
          name: client-port
          protocol: TCP
        - containerPort: 2380
          name: server-port
          protocol: TCP

      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: etcd0
  namespace: etcd-project

spec:
  type: ClusterIP

  selector:
    etcd_pod: etcd0

  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: client-port

  - name: server
    port: 2380
    protocol: TCP
    targetPort: server-port

---

apiVersion: v1
kind: Pod
metadata:
  name: etcd1
  namespace: etcd-project
  labels:
    app: etcd-cluster
    etcd_pod: etcd1

spec:
  containers:
    - name: etcd1
      image: bitnami/etcd:3-debian-10

      ports:
        - containerPort: 2379
          name: client-port
          protocol: TCP
        - containerPort: 2380
          name: server-port
          protocol: TCP

      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: etcd1
  namespace: etcd-project

spec:
  type: ClusterIP

  selector:
    etcd_pod: etcd1

  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: client-port

  - name: server
    port: 2380
    protocol: TCP
    targetPort: server-port

---

apiVersion: v1
kind: Pod
metadata:
  name: etcd2
  namespace: etcd-project
  labels:
    app: etcd-cluster
    etcd_pod: etcd2

spec:
  containers:
    - name: etcd2
      image: bitnami/etcd:3-debian-10

      ports:
        - containerPort: 2379
          name: client-port
          protocol: TCP
        - containerPort: 2380
          name: server-port
          protocol: TCP

      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: etcd2
  namespace: etcd-project

spec:
  type: ClusterIP

  selector:
    etcd_pod: etcd2

  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: client-port

  - name: server
    port: 2380
    protocol: TCP
    targetPort: server-port

---

apiVersion: v1
kind: Service
metadata:
  name: etcd
  namespace: etcd-project

spec:
  type: ClusterIP

  selector:
    app: etcd-cluster

  ports:
    - protocol: TCP
      port: 2379
      targetPort: client-port
