k8s/etcd-proxy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: etcd-proxy
  namespace: etcd-project
  labels:
    etcd_pod: etcd-proxy

spec:
  containers:
    - name: etcd-proxy
      image: bitnami/etcd:3-debian-10
      command: ["/opt/bitnami/etcd/bin/etcd"]
      args:
        - "grpc-proxy"
        - "start"
        - "--endpoints=etcd0:2379,etcd1:2379,etcd2:2379"
        - "--listen-addr=0.0.0.0:2379"
      ports:
      - containerPort: 2379
        name: client-port
        protocol: TCP
      - containerPort: 2380
        name: server-port
        protocol: TCP
      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: etcd-proxy
  namespace: etcd-project

spec:
  type: ClusterIP
  selector:
    etcd_pod: etcd-proxy
  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: client-port
  - name: server
    port: 2380
    protocol: TCP
    targetPort: server-port
