k8s/etcd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: etcd-svc
  namespace: development

spec:
  type: ClusterIP

  selector:
    app: etcd

  ports:
    - protocol: TCP
      port: 2379
      targetPort: client-port
