k8s/etcd0-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: etcd0
  namespace: development
  labels:
    app: etcd
    etcd_pod: etcd0

spec:
  containers:
    - name: etcd0
      image: bitnami/etcd:3-debian-10

      ports:
        - containerPort: 2379
          name: client-port
          protocol: TCP
        - containerPort: 2380
          name: server-port
          protocol: TCP

      resources:
        requests:
          memory: "64Mi"
          cpu: "100m"
        limits:
          memory: "128Mi"
          cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: etcd0
  namespace: development

spec:
  type: ClusterIP

  selector:
    etcd_pod: etcd0

  ports:
  - name: client
    port: 2379
    protocol: TCP
    targetPort: client-port

  - name: server
    port: 2380
    protocol: TCP
    targetPort: server-port
