k8s/etcd-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: etcd-project

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: etcd-deployment
  namespace: etcd-project

spec:
  replicas: 3

  selector:
    matchLabels:
      app: etcd-app

  template:
    metadata:
      name: etcd-app
      labels:
        app: etcd-app

    spec:
      containers:
        - name: app
          image: juliocesarmidia/etcd-app:v1.0.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8200
            name: etcd-app-port
          resources:
            requests:
              memory: "128Mi"
              cpu: "200m"
            limits:
              memory: "256Mi"
              cpu: "400m"
          livenessProbe:
            httpGet:
              path: /api/v1/healthcheck
              port: 8200
            initialDelaySeconds: 30
            timeoutSeconds: 30
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          # readinessProbe:
          #   httpGet:
          #     path: /api/v1/healthcheck
          #     port: 8200
          #   initialDelaySeconds: 30
          #   timeoutSeconds: 30
          #   periodSeconds: 30
          #   successThreshold: 1
          #   failureThreshold: 5
      restartPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: etcd-app
  namespace: etcd-project

spec:
  type: ClusterIP
  selector:
    app: etcd-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: etcd-app-port

---

apiVersion: extensions/v1beta1
kind: Ingress

metadata:
  name: etcd-app-ingress
  namespace: etcd-project
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/rewrite-target: /
    traefik.ingress.kubernetes.io/load-balancer-method: "wrr"
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: etcd-app
              servicePort: 80
