k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: etcd-app-ingress
  namespace: development
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: etcd-app-svc
              servicePort: 80
